--- a/Thesis/Masterarbeit.tex
+++ b/Thesis/Masterarbeit.tex
@@ -3,7 +3,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[english]{babel}
 \usepackage{amsmath}
-
+\usepackage{booktabs}
 \title{Anomaly detection in streaming data using autoencoders}
 \author{B.Sc. Bin Li}
 \newcommand{\firstprof}{Prof. Dr. Eirini Ntoutsi }
