--- a/src/DataPreparation/Dataset description.ipynb
+++ b/src/DataPreparation/Dataset description.ipynb
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
        "(581012,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,6 +996,31 @@
    "source": [
     "classlabel = pd.read_csv(\"C:/Users/Bin/Documents/Datasets/forest cover/covtype.data\",header=None).iloc[:,-1]\n",
     "classlabel.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    5\n",
+       "1    5\n",
+       "2    2\n",
+       "3    2\n",
+       "4    5\n",
+       "Name: 54, dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forest =  pd.read_csv(\"C:/Users/Bin/Documents/Datasets/forest cover/covtype.data\",header=None).iloc[:,-1]"
    ]
   },
   {
