--- a/Thesis/content/5_experimentalsetup.tex
+++ b/Thesis/content/5_experimentalsetup.tex
@@ -53,7 +53,7 @@ ARE(D) = \frac{1}{T}\sum_{t=1,win\in D}^{T}(input_{t,win}-output_{t,win})
 \end{equation}
 
 \begin{equation}\label{eq:ratio}
-REratio=\frac{ARE(G_a)}{ARE(G_n)}
+REratio=\frac{ARE(GS_a)}{ARE(GS_n)}
 \end{equation}
 
 
